# app/controllers/progress.js
@@ -8,6 +8,7 @@ const addIndexProgress = async (req, res, next) => {
     const userId = req.user;
     const { courseId } = req.query;
     let { indexProgress } = req.body;
+
     const existingProgress = await Progress.findOne({ userId, courseId });
     if (existingProgress.indexProgress >= indexProgress) {
       indexProgress = existingProgress.indexProgress;
@@ -26,7 +27,22 @@ const addIndexProgress = async (req, res, next) => {
       return indexVideo;
     };
 
-    const data = await Progress.findOneAndUpdate({ userId, courseId }, { indexProgress, percentage: Math.floor((indexProgress / lastIndexVideo()) * 100) }, { new: true });
+    const data = await Progress.findOneAndUpdate(
+      { userId, courseId },
+      {
+        indexProgress,
+        percentage: Math.floor((indexProgress / lastIndexVideo()) * 100),
+      },
+      { new: true },
+    );
+    if (data.percentage === 100) {
+      const data = await Progress.findOneAndUpdate(
+        { userId, courseId },
+        { status: "Done" },
+        { new: true },
+      );
+      res.status(200).send(resSuccess("Add index progress successfully", data));
+    }
     res.status(200).send(resSuccess("Add index progress successfully", data));
   } catch (error) {
     next(new ApiError(error.message));
@@ -35,6 +51,38 @@ const addIndexProgress = async (req, res, next) => {
 
 const getProgressUser = async (req, res, next) => {
   try {
+    const { status } = req.query;
+    if (status === "Done") {
+      const progressProgress = await Progress.find({
+        status: "Done",
+        userId: req.user,
+      }).populate({
+        path: "courseId",
+        select: "-chapters -__v -updatedBy",
+        populate: {
+          path: "category createdBy",
+          select: "name imageCategory",
+        },
+      });
+      return res
+        .status(200)
+        .send(resSuccess("Get progress user successfully", progressProgress));
+    } else if (status === "Progress") {
+      const progressDone = await Progress.find({
+        status: "Progress",
+        userId: req.user,
+      }).populate({
+        path: "courseId",
+        select: "-chapters -__v -updatedBy",
+        populate: {
+          path: "category createdBy",
+          select: "name imageCategory",
+        },
+      });
+      return res
+        .status(200)
+        .send(resSuccess("Get progress user successfully", progressDone));
+    }
     const progress = await Progress.find({ userId: req.user }).populate({
       path: "courseId",
       select: "-chapters -__v -updatedBy",
@@ -44,7 +92,9 @@ const getProgressUser = async (req, res, next) => {
       },
     });
 
-    res.status(200).send(resSuccess("Get progress user successfully", progress));
+    res
+      .status(200)
+      .send(resSuccess("Get progress user successfully", progress));
   } catch (error) {
     next(new ApiError(error.message));
   }
